--- a/vitalmob/css/style.css
+++ b/vitalmob/css/style.css
@@ -1,3 +1,24 @@
+/*FONTS*/
+@font-face 
+{
+    font-family: titilliumweb_regular;
+    src: url(../fonts/TitilliumWeb-Regular.ttf);
+}
+@font-face 
+{
+    font-family: titilliumweb_bold;
+    src: url(../fonts/TitilliumWeb-Bold.ttf);
+}
+@font-face 
+{
+    font-family: titilliumweb_semibold;
+    src: url(fonts/TitilliumWeb-SemiBold.ttf);
+}
+@font-face 
+{
+    font-family: titilliumweb_light;
+    src: url(../fonts/TitilliumWeb-Light.ttf);
+}
 a,a:hover,a:active,a:focus
 {
     color:#fff;
@@ -213,7 +234,7 @@ body
 .login_button
 {
   width:60%;
-  font-family: titilliumweb_regular; 
+  font-family: titilliumweb_semibold; 
   background-color: #1999d2;
   height: 30px;
   font-size: 18px;
