--- a/vitalmob/css/style.css
+++ b/vitalmob/css/style.css
@@ -12,7 +12,7 @@
 @font-face 
 {
     font-family: titilliumweb_semibold;
-    src: url(fonts/TitilliumWeb-SemiBold.ttf);
+    src: url(../fonts/TitilliumWeb-SemiBold.ttf);
 }
 @font-face 
 {
