--- a/vitalmob/css/style.css
+++ b/vitalmob/css/style.css
@@ -289,7 +289,8 @@ form p
     transition: all 0.3s;
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
+    max-width: 768px;
 }
 /* ---------------------------------------------------
     REGISTER_PAGE , LOGIN STYLE
@@ -407,7 +408,7 @@ form p
     font-size: 18px;
     color: #1f99da;
     border: 0;
-    margin-top:10%;
+    margin-top:5px;
 }
 .continue_text a
 {
